k8s/systems/envoy-gateway/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-gateway-ingress
  namespace: envoy-gateway-system
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 10080
  selector:
    # Эти селекторы Envoy Gateway сам добавит на свои поды
    gateway.envoyproxy.io/owning-gateway-name: default
    gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway-system
