k8s/systems/envoy-gateway/00-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default
  namespace: envoy-gateway-system
  annotations:
    # Говорим Envoy Gateway использовать наш сервис вместо создания своего
    gateway.envoyproxy.io/use-existing-service: "envoy-gateway-ingress"
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
